// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Code component aligned 1`] = `
.c0 {
  text-align: right;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
  font-size: 1rem;
  line-height: 1.5rem;
}

<code
  className="c0"
  fontFamily="code"
  fontSize="medium"
>
  Hello
</code>
`;

exports[`A Code component resized 1`] = `
.c0 {
  font-size: 2.875rem;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
  line-height: 4rem;
}

<code
  className="c0"
  fontFamily="code"
  fontSize="xxxxlarge"
>
  Hello
</code>
`;

exports[`A Code component weight 1`] = `
.c0 {
  font-weight: 700;
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
  font-size: 1rem;
  line-height: 1.5rem;
}

<code
  className="c0"
  fontFamily="code"
  fontSize="medium"
  fontWeight="bold"
>
  Hello
</code>
`;

exports[`A default Code component 1`] = `
.c0 {
  font-family: 'Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro',monospace;
  font-size: 1rem;
  line-height: 1.5rem;
}

<code
  className="c0"
  fontFamily="code"
  fontSize="medium"
>
  Hello
</code>
`;
